@@ -1,5 +1,13 @@
 2009-03-05  Xavier Queralt Mateu  <xqueralt@flumotion.com>
 
+	* flumotion/component/encoders/smoke/wizard.glade:
+	* flumotion/component/encoders/smoke/wizard_gtk.py:
+	Present the keyframe spacing in seconds on the wizard. Transform it to
+	number of frames taking into account the producer's framerate.
+	Fixes #829
+
+2009-03-05  Xavier Queralt Mateu  <xqueralt@flumotion.com>
+
 	* flumotion/admin/gtk/adminwindow.py (_disconnectActionProxy):
 	Fix the UIManager's disconnect from proxy callbac. It was expecting
 	the callback ids as a pair (name, id) but we only had the ids.
